syntax =  "proto3";

import "google/protobuf/any.proto";

message NetworkPackage {
    uint32 package_nr = 1;
    google.protobuf.Any content = 2;
}

